# apps/product-service/src/controllers/productController.ts
@@ -1,5 +1,10 @@
 import { NextFunction, Request, Response } from "express";
-import { NotFoundError, ValidationError } from "packages/error-handler";
+import {
+  AuthError,
+  NotFoundError,
+  ValidationError,
+} from "packages/error-handler";
+import imagekit from "packages/libs/imageKit";
 import prisma from "packages/libs/prisma";
 
 export const getCategories = async (
@@ -109,6 +114,261 @@ export const deleteDiscountCodes = async (
     return res
       .status(200)
       .json({ message: "Discount code successfully deleted!" });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const uploadProductImage = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { fileName } = req.body;
+
+    const response = await imagekit.upload({
+      file: fileName,
+      fileName: `product-${Date.now()}.jpg`,
+      folder: "/products",
+    });
+
+    res.status(201).json({
+      file_url: response.url,
+      fileId: response.fileId,
+    });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const deleteProductImage = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { fileId } = req.body;
+
+    const response = await imagekit.deleteFile(fileId);
+
+    res.status(201).json({
+      success: true,
+      response,
+    });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const createProduct = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const {
+      title,
+      short_description,
+      detailed_description,
+      warranty,
+      custom_specifications,
+      slug,
+      tags,
+      cash_on_delivery,
+      brand,
+      video_url,
+      category,
+      colors = [],
+      sizes = [],
+      discountCodes,
+      stock,
+      sale_price,
+      regular_price,
+      subCategory,
+      custom_properties = {},
+      images = [],
+    } = req.body;
+    if (
+      !title ||
+      !short_description ||
+      !detailed_description ||
+      !warranty ||
+      !slug ||
+      !tags ||
+      !cash_on_delivery ||
+      !brand ||
+      !category ||
+      !stock ||
+      !sale_price ||
+      !regular_price ||
+      !subCategory ||
+      !images ||
+      images.length === 0
+    )
+      return next(new ValidationError("Missing required fields!"));
+
+    if (!req.seller.id)
+      return next(new AuthError("Only seller can create products!"));
+
+    const slugChecking = await prisma.products.findUnique({
+      where: { slug },
+    });
+
+    if (slugChecking)
+      return next(
+        new ValidationError("Slug already exist! Please use a different slug!")
+      );
+
+    const newProduct = await prisma.products.create({
+      data: {
+        title,
+        short_description,
+        detailed_description,
+        warranty,
+        cashOnDelivery: cash_on_delivery,
+        slug,
+        shopId: req.seller?.shop?.id,
+        tags: Array.isArray(tags) ? tags : tags.split(","),
+        brand,
+        video_url,
+        category,
+        subCategory,
+        colors: colors || [],
+        discount_codes: discountCodes.map((discount: string) => discount),
+        sizes: sizes || [],
+        stock: parseInt(stock),
+        sale_price: parseFloat(sale_price),
+        regular_price: parseFloat(regular_price),
+        custom_properties: custom_properties || {},
+        custom_specifications: custom_specifications || [],
+        images: {
+          create: images
+            .filter((image: any) => image && image.fileId && image.file_url)
+            .map((image: any) => ({
+              file_id: image.fileId,
+              url: image.file_url,
+            })),
+        },
+      },
+      include: { images: true },
+    });
+
+    res.status(201).json({
+      success: true,
+      newProduct,
+    });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const getShopProducts = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const products = await prisma.products.findMany({
+      where: { shopId: req?.seller?.shop?.id },
+      include: { images: true },
+    });
+
+    res.status(201).json({
+      success: true,
+      products,
+    });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const deleteProduct = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { productId } = req.params;
+    const sellerShopId = req.seller?.shop?.id;
+
+    const product = await prisma.products.findUnique({
+      where: { id: productId },
+      select: { id: true, shopId: true, isDeleted: true },
+    });
+
+    if (!product) return next(new ValidationError("Product not found!"));
+
+    if (product.shopId !== sellerShopId)
+      return next(
+        new ValidationError(
+          "Unauthorized access! You can only delete your own products."
+        )
+      );
+
+    if (product.isDeleted)
+      return next(
+        new ValidationError("Product has already been marked for deletion!")
+      );
+
+    const deletedProduct = await prisma.products.update({
+      where: { id: product.id },
+      data: {
+        isDeleted: true,
+        deletedAt: new Date(Date.now() + 24 * 60 * 60 * 1000),
+      },
+    });
+
+    return res.status(200).json({
+      message:
+        "Product marked for deletion. It will be permanently removed after 24 hours unless restored.",
+      deletedAt: deletedProduct.deletedAt,
+    });
+  } catch (err) {
+    next(err);
+  }
+};
+
+export const restoreProduct = async (
+  req: any,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { productId } = req.params;
+
+    const sellerShopId = req.seller?.shop?.id;
+
+    const product = await prisma.products.findUnique({
+      where: { id: productId },
+      select: { id: true, shopId: true, isDeleted: true },
+    });
+
+    if (!product) return next(new ValidationError("Product not found!"));
+
+    if (product.shopId !== sellerShopId)
+      return next(
+        new ValidationError(
+          "Unauthorized access! You can only delete your own products."
+        )
+      );
+
+    if (!product.isDeleted)
+      return res.status(400).json({
+        message: "Product isn't in deleted state!",
+      });
+
+    await prisma.products.update({
+      where: { id: productId },
+      data: {
+        isDeleted: false,
+        deletedAt: null,
+      },
+    });
+
+    return res.status(200).json({
+      message: "Product successfully restored!",
+    });
   } catch (err) {
     next(err);
   }
