# apps/product-service/src/routes/productRoutes.ts
@@ -4,6 +4,12 @@ import {
   createDiscountCodes,
   getDiscountCodes,
   deleteDiscountCodes,
+  uploadProductImage,
+  deleteProductImage,
+  createProduct,
+  getShopProducts,
+  deleteProduct,
+  restoreProduct,
 } from "../controllers/productController";
 import isAuthenticated from "packages/middleware/isAuthenticated";
 
@@ -18,4 +24,11 @@ router.delete(
   deleteDiscountCodes
 );
 
+router.post("/upload-product-image", isAuthenticated, uploadProductImage);
+router.delete("/delete-product-image", isAuthenticated, deleteProductImage);
+
+router.post("/create-product", isAuthenticated, createProduct);
+router.get("/get-shop-products", isAuthenticated, getShopProducts);
+router.delete("/delete-product/:productId", isAuthenticated, deleteProduct);
+router.put("/restore-product/:productId", isAuthenticated, restoreProduct);
 export default router;
